refactor(BlackDuckCollector): Removed unnecessary optionals  and added a flag for valid server.